wip: pulling parameters and levels by locations

--- a/grib.ipynb
+++ b/grib.ipynb
@@ -10,11 +10,14 @@
     "import os\n",
     "from dataclasses import dataclass\n",
     "from datetime import datetime, timedelta\n",
+    "from enum import Enum\n",
     "from io import BytesIO, StringIO\n",
     "from logging import info, warning\n",
+    "from tempfile import NamedTemporaryFile\n",
     "from typing import Dict, Optional\n",
     "\n",
     "import boto3\n",
+    "import xarray as xr\n",
     "from botocore import UNSIGNED\n",
     "from botocore.config import Config"
    ]
@@ -35,6 +38,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Parameter(str, Enum):\n",
+    "    \"\"\"Common weather Parameter Names\"\"\"\n",
+    "\n",
+    "    TEMPERATURE = \"temperature\"\n",
+    "    RELATIVE_HUMIDITY = \"relative_humidity\"\n",
+    "    DEWPOINT_TEMPERATURE = \"dewpoint_temperature\"\n",
+    "    WIND_GUST = \"wind_gust\"\n",
+    "    WIND_U = \"wind_u\"\n",
+    "    WIND_V = \"wind_v\"\n",
+    "    WIND_SPEED = \"wind_speed\"\n",
+    "    WIND_DIRECTION = \"wind_direction\"\n",
+    "\n",
+    "\n",
+    "class Level(str, Enum):\n",
+    "    TWO_M_ABOVE_GROUND = \"two_meters_above_ground\"\n",
+    "    TEN_M_ABOVE_GROUND = \"ten_meters_above_ground\"\n",
+    "    SURFACE = \"surface\"\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class ModelParameter:\n",
+    "    parameter: Parameter\n",
+    "    level: Level\n",
+    "    cf_variable: str\n",
+    "\n",
+    "\n",
+    "desired_model_parameters = [\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.TEMPERATURE,\n",
+    "        level=Level.TWO_M_ABOVE_GROUND,\n",
+    "        cf_variable=\"t2m\",\n",
+    "    ),\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.RELATIVE_HUMIDITY,\n",
+    "        level=Level.TWO_M_ABOVE_GROUND,\n",
+    "        cf_variable=\"r2\",\n",
+    "    ),\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.DEWPOINT_TEMPERATURE,\n",
+    "        level=Level.TWO_M_ABOVE_GROUND,\n",
+    "        cf_variable=\"d2m\",\n",
+    "    ),\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.WIND_GUST, level=Level.SURFACE, cf_variable=\"gust\"\n",
+    "    ),\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.WIND_U, level=Level.TEN_M_ABOVE_GROUND, cf_variable=\"u10\"\n",
+    "    ),\n",
+    "    ModelParameter(\n",
+    "        parameter=Parameter.WIND_V, level=Level.TEN_M_ABOVE_GROUND, cf_variable=\"v10\"\n",
+    "    ),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@dataclass\n",
     "class ModelConfig:\n",
     "    short_name: str\n",
@@ -45,6 +108,7 @@
     "    s3_idx_file_name_pattern: str\n",
     "    s3_complete_run_number_of_files: int\n",
     "    parameters: Dict[str, str]\n",
+    "    levels: Dict[str, str]\n",
     "\n",
     "    def get_s3_grib_key(self, run: datetime, forecast: int) -> str:\n",
     "        return self.s3_prefix_pattern.format(\n",
@@ -65,6 +129,12 @@
     "    def get_s3_prefix(self, run: datetime) -> str:\n",
     "        return self.s3_prefix_pattern.format(run=run)\n",
     "\n",
+    "    def get_model_parameter_name(self, parameter: Parameter) -> Optional[str]:\n",
+    "        return self.parameters.get(parameter)\n",
+    "\n",
+    "    def get_model_level_name(self, level: Level) -> Optional[str]:\n",
+    "        return self.levels.get(level)\n",
+    "\n",
     "\n",
     "gfs_config = ModelConfig(\n",
     "    short_name=\"gfs\",\n",
@@ -74,7 +144,19 @@
     "    s3_grib_file_name_pattern=\"gfs.t{run:%H}z.pgrb2.0p25.f{forecast:03d}\",\n",
     "    s3_idx_file_name_pattern=\"gfs.t{run:%H}z.pgrb2.0p25.f{forecast:03d}.idx\",\n",
     "    s3_complete_run_number_of_files=418,\n",
-    "    parameters={},\n",
+    "    parameters={\n",
+    "        Parameter.TEMPERATURE: \"TMP\",\n",
+    "        Parameter.RELATIVE_HUMIDITY: \"RH\",\n",
+    "        Parameter.DEWPOINT_TEMPERATURE: \"DPT\",\n",
+    "        Parameter.WIND_GUST: \"GUST\",\n",
+    "        Parameter.WIND_U: \"UGRD\",\n",
+    "        Parameter.WIND_V: \"VGRD\",\n",
+    "    },\n",
+    "    levels={\n",
+    "        Level.TWO_M_ABOVE_GROUND: \"2 m above ground\",\n",
+    "        Level.TEN_M_ABOVE_GROUND: \"10 m above ground\",\n",
+    "        Level.SURFACE: \"surface\",\n",
+    "    },\n",
     ")"
    ]
   },
@@ -208,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_grib_index(index: StringIO) -> Dict[str, Dict[str, Dict[str, Optional[int]]]]:\n",
+    "def parse_grib_index(index: str) -> Dict[str, Dict[str, Dict[str, Optional[int]]]]:\n",
     "    \"\"\"Parses a grib index file into a usable dictionary.\n",
     "    Args:\n",
     "        index (str): The contents of the grib index file.\n",
@@ -218,8 +300,7 @@
     "    \"\"\"\n",
     "    result = {}\n",
     "    prev_start = None\n",
-    "    index.seek(0)\n",
-    "    for line in index.read().split(\"\\n\")[::-1]:\n",
+    "    for line in index.split(\"\\n\")[::-1]:\n",
     "        if len(line) != 0:\n",
     "            _, start, _, parameter, level, _ = line.rstrip(\":\").split(\":\")\n",
     "            stop = prev_start - 1 if prev_start is not None else None\n",
@@ -239,51 +320,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_grib_message_from_s3(\n",
-    "    bucket: str, key: str, start_byte: int, stop_byte: int\n",
+    "def get_data_from_s3(\n",
+    "    bucket: str,\n",
+    "    key: str,\n",
+    "    start_byte: Optional[int] = None,\n",
+    "    stop_byte: Optional[int] = None,\n",
     ") -> bytes:\n",
-    "    \"\"\"Downloads a single grib message from s3 using the s3 url and start/stop bytes\"\"\"\n",
+    "    \"\"\"Downloads data (bytes) from s3 with an option to download a partial object by specifying start/stop bytes\"\"\"\n",
     "    s3_client = boto3.client(\"s3\", config=Config(signature_version=UNSIGNED))\n",
-    "    range_header = {\"Range\": f\"bytes={start_byte}-{stop_byte}\"}\n",
-    "    response = s3_client.get_object(Bucket=bucket, Key=key, **range_header)\n",
-    "    return response[\"Body\"].read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if latest_run := get_latest_run(model_config=gfs_config):\n",
-    "    idx_test_file = get_test_idx_file(\n",
-    "        model_config=gfs_config, run=latest_run, forecast=0\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grib_key = gfs_config.get_s3_grib_key(run=latest_run, forecast=0)\n",
-    "print(grib_key)\n",
-    "if idx_test_file := get_test_idx_file(\n",
-    "    model_config=gfs_config, run=latest_run, forecast=0\n",
-    "):\n",
-    "    with open(idx_test_file, \"r\") as f:\n",
-    "        grib_index = parse_grib_index(index=f)\n",
+    "    if start_byte is None or stop_byte is None:\n",
+    "        response = s3_client.get_object(Bucket=bucket, Key=key)\n",
+    "    else:\n",
+    "        range_header = {\"Range\": f\"bytes={start_byte}-{stop_byte}\"}\n",
+    "        response = s3_client.get_object(Bucket=bucket, Key=key, **range_header)\n",
+    "    return response[\"Body\"].read()\n",
     "\n",
-    "bucket = gfs_config.s3_bucket\n",
-    "parameter = grib_index.get(\"TMP\")\n",
-    "level = parameter.get(\"2 m above ground\")\n",
-    "start_byte = level.get(\"start\")\n",
-    "stop_byte = level.get(\"stop\")\n",
-    "grib_message = get_grib_message_from_s3(\n",
-    "    bucket=bucket, key=grib_key, start_byte=start_byte, stop_byte=stop_byte\n",
-    ")\n",
-    "assert grib_message[:4] == b\"GRIB\""
+    "\n",
+    "def get_grib_message_from_s3(\n",
+    "    model_config: ModelConfig,\n",
+    "    grib_index: dict,\n",
+    "    run: datetime,\n",
+    "    forecast: int,\n",
+    "    parameter: Parameter,\n",
+    "    level: Level,\n",
+    ") -> Optional[bytes]:\n",
+    "    \"\"\"Downloads a single grib message from s3 using the s3 url\"\"\"\n",
+    "    bucket = model_config.s3_bucket\n",
+    "    key = model_config.get_s3_grib_key(run=run, forecast=forecast)\n",
+    "    model_parameter_name = model_config.get_model_parameter_name(parameter)\n",
+    "    model_level_name = model_config.get_model_level_name(level)\n",
+    "    if model_parameter_name and model_level_name:\n",
+    "        byte_locations = grib_index[model_parameter_name][model_level_name]\n",
+    "        start_byte = byte_locations[\"start\"]\n",
+    "        stop_byte = byte_locations[\"stop\"]\n",
+    "        return get_data_from_s3(bucket, key, start_byte, stop_byte)\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def get_grib_idx_from_s3(\n",
+    "    model_config: ModelConfig, run: datetime, forecast: int\n",
+    ") -> Optional[bytes]:\n",
+    "    \"\"\"Downloads a grib index file from s3 using the s3 url\"\"\"\n",
+    "    bucket = model_config.s3_bucket\n",
+    "    key = model_config.get_s3_idx_key(run=run, forecast=forecast)\n",
+    "    return get_data_from_s3(bucket, key)"
    ]
   },
   {
@@ -304,6 +385,259 @@
     "        ds = xr.open_dataset(file.name, engine=\"cfgrib\")\n",
     "        print(ds.coords)\n",
     "        print(ds.t2m.interp(latitude=lat, longitude=lon, method=\"linear\").values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_user_lon_to_gfs_lon(lon: float) -> float:\n",
+    "    \"\"\"Converts a longitude to the longitude used by the GFS model.\n",
+    "\n",
+    "    Args:\n",
+    "        lon (float): The longitude to convert.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The longitude used by the GFS model.\n",
+    "    \"\"\"\n",
+    "    if lon < 0:\n",
+    "        return 360 + lon\n",
+    "    return lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_forecast_hour_for_valid_time(model_run: datetime, valid_time: datetime) -> int:\n",
+    "    \"\"\"Gets the forecast hour for a given valid time.\n",
+    "\n",
+    "    Args:\n",
+    "        model_run (datetime): The model run time.\n",
+    "        valid_time (datetime): The valid time.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The forecast hour.\n",
+    "    \"\"\"\n",
+    "    return int((valid_time - model_run).total_seconds() / 3600)\n",
+    "\n",
+    "\n",
+    "def test_get_forecast_hour_for_valid_time() -> None:\n",
+    "    model_run = datetime(2020, 1, 1, 0)\n",
+    "    valid_time = datetime(2020, 1, 1, 6)\n",
+    "    assert get_forecast_hour_for_valid_time(model_run, valid_time) == 6\n",
+    "\n",
+    "\n",
+    "def get_valid_time_for_forecast_hour(\n",
+    "    model_run: datetime, forecast_hour: int\n",
+    ") -> datetime:\n",
+    "    \"\"\"Gets the valid time for a given forecast hour.\n",
+    "\n",
+    "    Args:\n",
+    "        model_run (datetime): The model run time.\n",
+    "        forecast_hour (int): The forecast hour.\n",
+    "\n",
+    "    Returns:\n",
+    "        datetime: The valid time.\n",
+    "    \"\"\"\n",
+    "    return model_run + timedelta(hours=forecast_hour)\n",
+    "\n",
+    "\n",
+    "def test_get_valid_time_for_forecast_hour() -> None:\n",
+    "    model_run = datetime(2020, 1, 1, 0)\n",
+    "    forecast_hour = 6\n",
+    "    assert get_valid_time_for_forecast_hour(model_run, forecast_hour) == datetime(\n",
+    "        2020, 1, 1, 6\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "test_get_forecast_hour_for_valid_time()\n",
+    "test_get_valid_time_for_forecast_hour()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetime.utcnow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class ParamResult:\n",
+    "    \"\"\"The result of a parameter query.\"\"\"\n",
+    "\n",
+    "    parameter: str\n",
+    "    level: str\n",
+    "    latitude: float\n",
+    "    longitude: float\n",
+    "    value: float\n",
+    "    valid_time: datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_test = [\n",
+    "    ParamResult(\n",
+    "        parameter=Parameter.TEMPERATURE,\n",
+    "        level=Level.TWO_M_ABOVE_GROUND,\n",
+    "        latitude=40.0,\n",
+    "        longitude=105.0,\n",
+    "        value=273.15,\n",
+    "        valid_time=datetime(2020, 1, 1, 6),\n",
+    "    ),\n",
+    "    ParamResult(\n",
+    "        parameter=Parameter.DEWPOINT_TEMPERATURE,\n",
+    "        level=Level.TWO_M_ABOVE_GROUND,\n",
+    "        latitude=45.0,\n",
+    "        longitude=-105.0,\n",
+    "        value=275.15,\n",
+    "        valid_time=datetime(2020, 1, 1, 6),\n",
+    "    ),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(param_test)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main() -> None:\n",
+    "    desired_locations = [\n",
+    "        (45.0, -105.0),\n",
+    "        (40.0, 105.0),\n",
+    "    ]\n",
+    "\n",
+    "    model_config = gfs_config\n",
+    "\n",
+    "    model_run = get_latest_run(model_config=model_config)\n",
+    "    print(f\"{model_run=}\")\n",
+    "\n",
+    "    valid_time = datetime.fromtimestamp((datetime.utcnow().timestamp() // 3600) * 3600)\n",
+    "    print(f\"valid time: {valid_time}\")\n",
+    "    forecast = get_forecast_hour_for_valid_time(\n",
+    "        model_run=model_run, valid_time=valid_time\n",
+    "    )\n",
+    "    print(f\"{forecast=}\")\n",
+    "\n",
+    "    grib_index_data = get_grib_idx_from_s3(\n",
+    "        model_config=model_config, run=model_run, forecast=forecast\n",
+    "    )\n",
+    "    grib_index = parse_grib_index(grib_index_data.decode())\n",
+    "\n",
+    "    results = []\n",
+    "    for param_config in desired_model_parameters:\n",
+    "        param = param_config.parameter\n",
+    "        level = param_config.level\n",
+    "        cf_variable = param_config.cf_variable\n",
+    "        info(f\"Getting {param} at {level} for {len(desired_locations)} locations\")\n",
+    "\n",
+    "        grib_message = get_grib_message_from_s3(\n",
+    "            model_config=model_config,\n",
+    "            grib_index=grib_index,\n",
+    "            run=model_run,\n",
+    "            forecast=forecast,\n",
+    "            parameter=param,\n",
+    "            level=level,\n",
+    "        )\n",
+    "        assert grib_message[:4] == b\"GRIB\"\n",
+    "\n",
+    "        with NamedTemporaryFile(mode=\"wb\") as file:\n",
+    "            file.write(grib_message)\n",
+    "\n",
+    "            ds = xr.open_dataset(file.name, engine=\"cfgrib\")\n",
+    "\n",
+    "            for latitude, longitude in desired_locations:\n",
+    "                gfs_longitude = convert_user_lon_to_gfs_lon(lon=longitude)\n",
+    "                value = (\n",
+    "                    ds[cf_variable]\n",
+    "                    .interp(latitude=latitude, longitude=gfs_longitude, method=\"linear\")\n",
+    "                    .values\n",
+    "                )\n",
+    "                param_result = ParamResult(\n",
+    "                    parameter=param,\n",
+    "                    level=level,\n",
+    "                    latitude=latitude,\n",
+    "                    longitude=longitude,\n",
+    "                    value=value,\n",
+    "                    valid_time=valid_time,\n",
+    "                )\n",
+    "                results.append(param_result)\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    display(df)\n",
+    "\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if latest_run := get_latest_run(model_config=gfs_config):\n",
+    "    idx_test_file = get_test_idx_file(\n",
+    "        model_config=gfs_config, run=latest_run, forecast=0\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "level = Level.TWO_M_ABOVE_GROUND\n",
+    "parameter = Parameter.RELATIVE_HUMIDITY\n",
+    "\n",
+    "grib_message = get_grib_message_from_s3(\n",
+    "    model_config=gfs_config,\n",
+    "    grib_index=grib_index,\n",
+    "    run=latest_run,\n",
+    "    forecast=0,\n",
+    "    parameter=parameter,\n",
+    "    level=level,\n",
+    ")\n",
+    "\n",
+    "assert grib_message[:4] == b\"GRIB\"\n",
+    "if grib_message is not None:\n",
+    "    with open(\"test.grib\", mode=\"wb\") as file:\n",
+    "        file.write(grib_message)\n",
+    "\n",
+    "ds = xr.open_dataset(\"test.grib\", engine=\"cfgrib\")\n",
+    "\n",
+    "ds"
    ]
   },
   {
