wip: adds wind speed/dir and logging improvements

--- a/grib.ipynb
+++ b/grib.ipynb
@@ -6,20 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
     "import os\n",
     "from dataclasses import dataclass\n",
     "from datetime import datetime, timedelta\n",
     "from enum import Enum\n",
     "from io import BytesIO, StringIO\n",
-    "from logging import info, warning\n",
+    "import picologging as logging\n",
     "from tempfile import NamedTemporaryFile\n",
-    "from typing import Dict, Optional\n",
+    "from typing import Dict, Optional, Tuple\n",
     "\n",
     "import boto3\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import xarray as xr\n",
     "from botocore import UNSIGNED\n",
-    "from botocore.config import Config"
+    "from botocore.config import Config\n",
+    "from numpy.typing import ArrayLike, NDArray\n",
+    "\n",
+    "%load_ext pyinstrument"
    ]
   },
   {
@@ -28,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.INFO)"
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "logger = logging.getLogger()\n"
    ]
   },
   {
@@ -52,8 +56,8 @@
     "\n",
     "\n",
     "class Level(str, Enum):\n",
-    "    TWO_M_ABOVE_GROUND = \"two_meters_above_ground\"\n",
-    "    TEN_M_ABOVE_GROUND = \"ten_meters_above_ground\"\n",
+    "    TWO_M_ABOVE_GROUND = \"2_meters_above_ground\"\n",
+    "    TEN_M_ABOVE_GROUND = \"10_meters_above_ground\"\n",
     "    SURFACE = \"surface\"\n",
     "\n",
     "\n",
@@ -226,26 +230,26 @@
     "\n",
     "    for run in runs_to_try:\n",
     "        prefix = model_config.get_s3_grib_key(run=run, forecast=0).rstrip(\"0\")\n",
-    "        info(\n",
+    "        logging.info(\n",
     "            f\"Checking {run:%Y%m%d %H}Z model run for completeness. (S3 prefix - s3://{bucket}/{prefix})\"\n",
     "        )\n",
     "        result = s3_client.list_objects_v2(Bucket=bucket, Prefix=prefix)\n",
     "        if contents := result.get(\"Contents\"):\n",
     "            num_files_found = len(contents)\n",
-    "            info(\n",
+    "            logging.info(\n",
     "                f\"Found {num_files_found} files available for {run:%Y%m%d %H}Z model run.\"\n",
     "            )\n",
     "            if num_files_found == expected_number_of_files:\n",
     "                latest_run = run\n",
-    "                info(f\"Found complete run: {latest_run:%Y%m%d %HZ}\")\n",
+    "                logging.info(f\"Found complete run: {latest_run:%Y%m%d %HZ}\")\n",
     "                return latest_run\n",
     "\n",
     "        else:\n",
-    "            info(\n",
+    "            logging.info(\n",
     "                f\"Found no files available for {run:%Y%m%d %H}Z model run. (S3 Prefix - {prefix})\"\n",
     "            )\n",
     "\n",
-    "    warning(f\"No complete runs found in previous {max_runs_to_try} runs.\")"
+    "    logging.warning(f\"No complete runs found in previous {max_runs_to_try} runs.\")"
    ]
   },
   {
@@ -271,15 +275,15 @@
     "    local_file_name = model_config.get_idx_file_name(run=run, forecast=forecast)\n",
     "\n",
     "    if os.path.exists(local_file_name):\n",
-    "        info(f\"File {idx_file} already exists locally.\")\n",
+    "        logging.info(f\"File {idx_file} already exists locally.\")\n",
     "        return local_file_name\n",
     "    try:\n",
-    "        info(f\"Downloading {idx_file} from S3...\")\n",
+    "        logging.info(f\"Downloading {idx_file} from S3...\")\n",
     "        s3_client.download_file(bucket, idx_file, local_file_name)\n",
     "    except s3_client.exceptions.NoSuchKey as e:\n",
-    "        warning(f\"File {idx_file} not found on S3. {e}\")\n",
+    "        logging.warning(f\"File {idx_file} not found on S3. {e}\")\n",
     "    else:\n",
-    "        info(f\"Successfully downloaded {idx_file}.\")\n",
+    "        logging.info(f\"Successfully downloaded {idx_file}.\")\n",
     "\n",
     "    return local_file_name"
    ]
@@ -373,26 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tempfile import NamedTemporaryFile\n",
-    "\n",
-    "import xarray as xr\n",
-    "\n",
-    "lat = 40.0\n",
-    "lon = 105.0\n",
-    "if grib_message is not None:\n",
-    "    with NamedTemporaryFile(mode=\"wb\") as file:\n",
-    "        file.write(grib_message)\n",
-    "        ds = xr.open_dataset(file.name, engine=\"cfgrib\")\n",
-    "        print(ds.coords)\n",
-    "        print(ds.t2m.interp(latitude=lat, longitude=lon, method=\"linear\").values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def convert_user_lon_to_gfs_lon(lon: float) -> float:\n",
     "    \"\"\"Converts a longitude to the longitude used by the GFS model.\n",
     "\n",
@@ -465,15 +449,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datetime.utcnow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "@dataclass\n",
     "class ParamResult:\n",
     "    \"\"\"The result of a parameter query.\"\"\"\n",
@@ -492,36 +467,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_test = [\n",
-    "    ParamResult(\n",
-    "        parameter=Parameter.TEMPERATURE,\n",
-    "        level=Level.TWO_M_ABOVE_GROUND,\n",
-    "        latitude=40.0,\n",
-    "        longitude=105.0,\n",
-    "        value=273.15,\n",
-    "        valid_time=datetime(2020, 1, 1, 6),\n",
-    "    ),\n",
-    "    ParamResult(\n",
-    "        parameter=Parameter.DEWPOINT_TEMPERATURE,\n",
-    "        level=Level.TWO_M_ABOVE_GROUND,\n",
-    "        latitude=45.0,\n",
-    "        longitude=-105.0,\n",
-    "        value=275.15,\n",
-    "        valid_time=datetime(2020, 1, 1, 6),\n",
-    "    ),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(param_test)\n",
-    "df"
+    "def calculate_wind_speed_from_uv(u: float, v: float) -> float:\n",
+    "    \"\"\"Calculates the wind speed from the U and V components.\n",
+    "\n",
+    "    Args:\n",
+    "        u (float): The U component.\n",
+    "        v (float): The V component.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The wind speed.\n",
+    "    \"\"\"\n",
+    "    return np.sqrt(u**2 + v**2)\n",
+    "\n",
+    "\n",
+    "def calculate_wind_dir_from_uv(u: float, v: float) -> float:\n",
+    "    \"\"\"Calculates the wind direction from the U and V components.\n",
+    "\n",
+    "    Args:\n",
+    "        u (float): The U component.\n",
+    "        v (float): The V component.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The wind direction.\n",
+    "    \"\"\"\n",
+    "    return np.arctan2(u, v) * (180 / np.pi)\n",
+    "\n",
+    "\n",
+    "def calc_wind_speed_and_dir_from_uv(u: ArrayLike, v: ArrayLike):\n",
+    "    \"\"\"Calculates the wind speed and direction from the U and V components.\n",
+    "\n",
+    "    Args:\n",
+    "        u (ArrayLike): The U component.\n",
+    "        v (ArrayLike): The V component.\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple[NDArray, NDArray]: The wind speed and direction.\n",
+    "    \"\"\"\n",
+    "    speed = calculate_wind_speed_from_uv(u, v)\n",
+    "    dir = calculate_wind_dir_from_uv(u, v)\n",
+    "    return speed, dir\n",
+    "\n",
+    "\n",
+    "def create_wind_speed_and_direction_results(df) -> list[ParamResult]:\n",
+    "    \"\"\"Creates the wind speed and direction results from the U and V components.\"\"\"\n",
+    "    wind_u = df.value[df.parameter == Parameter.WIND_U].to_numpy()\n",
+    "    wind_v = df.value[df.parameter == Parameter.WIND_V].to_numpy()\n",
+    "\n",
+    "    unique_locations = df[df.parameter == Parameter.WIND_U][[\"latitude\", \"longitude\"]]\n",
+    "    latitudes = unique_locations.latitude.to_numpy()\n",
+    "    longitudes = unique_locations.longitude.to_numpy()\n",
+    "    valid_time = df.valid_time.unique()[0]\n",
+    "    logging.info(\"Calculating wind speed and direction for {} locations\".format(len(unique_locations)))\n",
+    "\n",
+    "    wind_speed, wind_dir = calc_wind_speed_and_dir_from_uv(wind_u, wind_v)\n",
+    "\n",
+    "    level = Level.TEN_M_ABOVE_GROUND\n",
+    "    results = []\n",
+    "    for latitude, longitude, wind_speed, wind_dir in zip(\n",
+    "        latitudes, longitudes, wind_speed, wind_dir\n",
+    "    ):\n",
+    "        results.append(\n",
+    "            ParamResult(\n",
+    "                parameter=Parameter.WIND_SPEED.value,\n",
+    "                level=level.value,\n",
+    "                latitude=latitude,\n",
+    "                longitude=longitude,\n",
+    "                value=wind_speed,\n",
+    "                valid_time=valid_time,\n",
+    "            ),\n",
+    "        )\n",
+    "        results.append(\n",
+    "            ParamResult(\n",
+    "                parameter=Parameter.WIND_DIRECTION.value,\n",
+    "                level=level.value,\n",
+    "                latitude=latitude,\n",
+    "                longitude=longitude,\n",
+    "                value=wind_dir,\n",
+    "                valid_time=valid_time,\n",
+    "            )\n",
+    "        )\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
@@ -532,6 +559,7 @@
    "source": [
     "def main() -> None:\n",
     "    desired_locations = [\n",
+    "        (41.10, -95.94),\n",
     "        (45.0, -105.0),\n",
     "        (40.0, 105.0),\n",
     "    ]\n",
@@ -557,8 +585,9 @@
     "    for param_config in desired_model_parameters:\n",
     "        param = param_config.parameter\n",
     "        level = param_config.level\n",
+    "        #level = model_config.get_model_level_name(param_config.level)\n",
     "        cf_variable = param_config.cf_variable\n",
-    "        info(f\"Getting {param} at {level} for {len(desired_locations)} locations\")\n",
+    "        logging.info(f\"Getting {param} at {level} for {len(desired_locations)} locations\")\n",
     "\n",
     "        grib_message = get_grib_message_from_s3(\n",
     "            model_config=model_config,\n",
@@ -581,10 +610,11 @@
     "                    ds[cf_variable]\n",
     "                    .interp(latitude=latitude, longitude=gfs_longitude, method=\"linear\")\n",
     "                    .values\n",
+    "                    .item()\n",
     "                )\n",
     "                param_result = ParamResult(\n",
-    "                    parameter=param,\n",
-    "                    level=level,\n",
+    "                    parameter=param.value,\n",
+    "                    level=level.value,\n",
     "                    latitude=latitude,\n",
     "                    longitude=longitude,\n",
     "                    value=value,\n",
@@ -593,10 +623,12 @@
     "                results.append(param_result)\n",
     "\n",
     "    df = pd.DataFrame(results)\n",
-    "    display(df)\n",
+    "    wind_df = pd.DataFrame(create_wind_speed_and_direction_results(df))\n",
+    "    return pd.concat([df, wind_df], ignore_index=True)\n",
     "\n",
     "\n",
-    "main()"
+    "df = main()\n",
+    "df"
    ]
   },
   {
@@ -604,7 +636,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%pyinstrument\n",
+    "main()"
+   ]
   },
   {
    "cell_type": "code",
@@ -618,8 +653,12 @@
     "    )\n",
     "\n",
     "\n",
-    "level = Level.TWO_M_ABOVE_GROUND\n",
-    "parameter = Parameter.RELATIVE_HUMIDITY\n",
+    "level = Level.TEN_M_ABOVE_GROUND\n",
+    "parameter = Parameter.WIND_U\n",
+    "\n",
+    "test_idx_file = get_test_idx_file(model_config=gfs_config, run=latest_run, forecast=0)\n",
+    "with open(test_idx_file, mode=\"rb\") as file:\n",
+    "    grib_index = parse_grib_index(file.read().decode())\n",
     "\n",
     "grib_message = get_grib_message_from_s3(\n",
     "    model_config=gfs_config,\n",
@@ -639,6 +678,31 @@
     "\n",
     "ds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.u10.interp(latitude=40.0, longitude=105.0, method=\"linear\").values.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_user_lon_to_gfs_lon(lon=-95.93)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
