--- a/grib.ipynb
+++ b/grib.ipynb
@@ -727,10 +727,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "pygments_lexer": "ipython3"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "eb4a0ac80907d7f44e1a5e88d3d3381b33e3dbedd3a24d113e876f30a0c46bee"
