removed picologging - breaks m1

--- a/grib.ipynb
+++ b/grib.ipynb
@@ -11,7 +11,7 @@
     "from datetime import datetime, timedelta\n",
     "from enum import Enum\n",
     "from io import BytesIO, StringIO\n",
-    "import picologging as logging\n",
+    "import logging\n",
     "from tempfile import NamedTemporaryFile\n",
     "from typing import Dict, Optional, Tuple\n",
     "\n",
